Make table a table

--- a/notebooks/tutorial/8 - Getting tomes from the ADX.ipynb
+++ b/notebooks/tutorial/8 - Getting tomes from the ADX.ipynb
@@ -15,6 +15,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "725fd8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<!-- ignore this please -->\n",
+       "<style>\n",
+       "  table {margin-left: 0 !important;}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<!-- ignore this please -->\n",
+    "<style>\n",
+    "  table {margin-left: 0 !important;}\n",
+    "</style>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "288a0939",
    "metadata": {},
@@ -27,30 +57,34 @@
     "\n",
     "Here are the tomes and their sizes:\n",
     "\n",
-    "- channel_bomb_action.2021-05-01,2022-01-01 size: 276.46 MB\n",
-    "- channel_bomb_state.2021-05-01,2022-01-01 size: 52.97 MB\n",
-    "- channel_bot_takeover.2021-05-01,2022-01-01 size: 10.3 MB\n",
-    "- channel_grenade_state.2021-05-01,2022-01-01 size: 1078.91 MB\n",
-    "- channel_item_remove.2021-05-01,2022-01-01 size: 2274.52 MB\n",
-    "- channel_molotov_state.2021-05-01,2022-01-01 size: 307.35 MB\n",
-    "- channel_player_action.2021-05-01,2022-01-01 size: 3043.63 MB\n",
-    "- channel_player_blind.2021-05-01,2022-01-01 size: 646.5 MB\n",
-    "- channel_player_connect.2021-05-01,2022-01-01 size: 13.46 MB\n",
-    "- channel_player_death.2021-05-01,2022-01-01 size: 917.26 MB\n",
-    "- channel_player_disconnect.2021-05-01,2022-01-01 size: 18.74 MB\n",
-    "- channel_player_fall.2021-05-01,2022-01-01 size: 26.75 MB\n",
-    "- channel_player_hurt.2021-05-01,2022-01-01 size: 3353.22 MB\n",
-    "- channel_player_info.2021-05-01,2022-01-01 size: 108.19 MB\n",
-    "- channel_player_interaction.2021-05-01,2022-01-01 size: 9.87 MB\n",
-    "- channel_player_personal.2021-05-01,2022-01-01 size: 60.36 MB\n",
-    "- channel_player_spawn.2021-05-01,2022-01-01 size: 208.35 MB\n",
-    "- channel_round_end.2021-05-01,2022-01-01 size: 32.29 MB\n",
-    "- channel_round_mvp.2021-05-01,2022-01-01 size: 33.35 MB\n",
-    "- channel_round_start.2021-05-01,2022-01-01 size: 30.47 MB\n",
-    "- channel_round_state.2021-05-01,2022-01-01 size: 96.82 MB\n",
-    "- channel_weapon_action.2021-05-01,2022-01-01 size: 1292.28 MB\n",
-    "- header_tome.2021-05-01,2022-01-01 size: 13.07 MB\n",
-    "- subheader_tome_active_duty.2021-05-01,2022-01-01 size: 8.39 MB\n",
+    "|Channel Name|Size|\n",
+    "|:---|:---|\n",
+    "|channel_bomb_action.2021-05-01,2022-01-01 | 276.46 MB |\n",
+    "|channel_bomb_state.2021-05-01,2022-01-01 | 52.97 MB |\n",
+    "|channel_bot_takeover.2021-05-01,2022-01-01 | 10.3 MB |\n",
+    "|channel_grenade_state.2021-05-01,2022-01-01 | 1078.91 MB |\n",
+    "|channel_item_remove.2021-05-01,2022-01-01 | 2274.52 MB |\n",
+    "|channel_molotov_state.2021-05-01,2022-01-01 | 307.35 MB |\n",
+    "|channel_player_action.2021-05-01,2022-01-01 | 3043.63 MB |\n",
+    "|channel_player_blind.2021-05-01,2022-01-01 | 646.5 MB |\n",
+    "|channel_player_connect.2021-05-01,2022-01-01 | 13.46 MB |\n",
+    "|channel_player_death.2021-05-01,2022-01-01 | 917.26 MB |\n",
+    "|channel_player_disconnect.2021-05-01,2022-01-01 | 18.74 MB |\n",
+    "|channel_player_fall.2021-05-01,2022-01-01 | 26.75 MB |\n",
+    "|channel_player_hurt.2021-05-01,2022-01-01 | 3353.22 MB |\n",
+    "|channel_player_info.2021-05-01,2022-01-01 | 108.19 MB |\n",
+    "|channel_player_interaction.2021-05-01,2022-01-01 | 9.87 MB |\n",
+    "|channel_player_personal.2021-05-01,2022-01-01 | 60.36 MB |\n",
+    "|channel_player_spawn.2021-05-01,2022-01-01 | 208.35 MB |\n",
+    "|channel_round_end.2021-05-01,2022-01-01 | 32.29 MB |\n",
+    "|channel_round_mvp.2021-05-01,2022-01-01 | 33.35 MB |\n",
+    "|channel_round_start.2021-05-01,2022-01-01 | 30.47 MB |\n",
+    "|channel_round_state.2021-05-01,2022-01-01 | 96.82 MB |\n",
+    "|channel_weapon_action.2021-05-01,2022-01-01 | 1292.28 MB |\n",
+    "|header_tome.2021-05-01,2022-01-01 | 13.07 MB |\n",
+    "|subheader_tome_active_duty.2021-05-01,2022-01-01 | 8.39 MB |\n",
+    "\n",
+    "---\n",
     "\n",
     "The larger channels such as `player_vector` and `player_status` are not included."
    ]
@@ -62,7 +96,7 @@
    "source": [
     "# Get the data set ID for the tome data set\n",
     "\n",
-    "**Important:** This is different than the data set id from the previous notebook. See below for where to go to get the correct data set ID for the tomes we have built. \n",
+    "**Important:** This a different data set from the previous notebook. Therefore, there is a different data set id. See below for where to go to get the correct data set id for the tomes we have pre-built. \n",
     "\n",
     "Also set your bucket name and prefix if needed."
    ]
