Remove AWS credential setup from step 1. Fix regex.

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -16,16 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3fd27b4",
-   "metadata": {},
-   "source": [
-    "## Setup your AWS credentials\n",
-    "\n",
-    "Follow the [guide on setting up AWS credentials](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/quickstart.html#configuration) to properly download things from the AWS Data Exchange."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "937d17f2",
    "metadata": {},
    "source": [
@@ -48,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4933e25b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "ec2873e1",
    "metadata": {},
    "outputs": [],
@@ -70,7 +60,7 @@
     "import re\n",
     "import warnings\n",
     "\n",
-    "if not re.match(\"\\S+.\\d{4}-\\d{2}-\\d{2},\\d{4}-\\d{2}-\\d{2}.*\\S*\",header_name):\n",
+    "if not re.match(r\"\\S+.\\d{4}-\\d{2}-\\d{2},\\d{4}-\\d{2}-\\d{2}[.\\S*]*\",header_name):\n",
     "    warnings.warn(f'Header name of {header_name} does not match convention of tome_name.start-date,end-data.comment')\n",
     "\n",
     "ds_type = 'csds'\n",
