Add aws account setup to step 7

--- a/notebooks/tutorial/7 - Getting csds data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting csds data from the ADX.ipynb
@@ -93,6 +93,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e67413fd",
+   "metadata": {},
+   "source": [
+    "# 0. Before you start, setup your AWS credentials\n",
+    "\n",
+    "Follow the [guide on setting up AWS credentials](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/quickstart.html#configuration) to properly download things from the AWS Data Exchange."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29b4d737",
    "metadata": {},
    "source": [
