Fix extra mention of deciding when to write pages

--- a/notebooks/tutorial/5 - Create tome.ipynb
+++ b/notebooks/tutorial/5 - Create tome.ipynb
@@ -17,7 +17,7 @@
     "1. Repeat from step 2 until no more matches remain.\n",
     "\n",
     "\n",
-    "To make a tome, we use the `make_tome` function of the tome curator. This function handles reading the data science files, concatenating dataframes, writing tome pages, deciding when to write tome pages, and keeping track of matches included. We only need to provide the name of the tome we are making and the name of the header or subheader tome to serve as the index of matches. \n",
+    "To make a tome, we use the `make_tome` function of the tome curator. This function handles reading the data science files, concatenating dataframes, writing tome pages, and keeping track of matches included. We only need to provide the name of the tome we are making and the name of the header or subheader tome to serve as the index of matches. \n",
     "\n",
     "An important (but optional) parameter is the `ds_reading_instructions` where you only read in certain channels and columns for each match. This generally provides a drastic speed up because of how large some channels are, particularly `player_vector`, `player_status`, and `tick`. Avoiding reading those channels altogether will speed things up.\n",
     "\n",
