Add clearer msgs around what to change in step 1

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -38,20 +38,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "4933e25b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
+    "## Edit this to point to where you want to save the csds files.\n",
+    "ds_collection_path = os.path.join('..','..','tmp') \n",
+    "\n",
+    "## Edit this to point at where you want to save combinations\n",
+    "## of csds files which we call a \"tome\"\n",
     "tome_collection_path = os.path.join('..','..','tmp')\n",
-    "ds_collection_path = os.path.join('..','..','tmp')\n",
+    "\n",
+    "## If you have not downloaded any data yet, keep this as is\n",
+    "## If you have downloaded the data, adjust the \n",
     "header_name = 'header_tome.2022-05-15,2022-05-15'"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09242f7a",
+   "metadata": {},
+   "source": [
+    "#### You can always change these later by editing your `.env` file in the `notebooks` folder."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "ec2873e1",
    "metadata": {},
    "outputs": [],
