Make folders in first notebook.

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09242f7a",
+   "id": "059edfff",
    "metadata": {},
    "source": [
     "#### You can always change these later by editing your `.env` file in the `notebooks` folder."
@@ -104,7 +104,10 @@
     "        if system != 'Linux':\n",
     "            print('unknown OS. The .env file was saved using linux syntax. If that is not right please edit it yourself lol.')\n",
     "with open(os.path.join('..','.env'), 'r') as f:\n",
-    "    print(f.read())"
+    "    print(f.read())\n",
+    "\n",
+    "os.makedirs(ds_collection_path, exist_ok=True)\n",
+    "os.makedirs(tome_collection_path, exist_ok=True)"
    ]
   },
   {
