Remove word "obviously"

--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Because they can be large, the combined dataframe data are saved in separate files called \"pages\". You can set a max (memory) size for each page when making a tome.\n",
     "\n",
-    "Let's read in that tome and train a model to go from number of footsteps to rank, obviously.\n",
+    "Let's read in that tome and train a model to go from number of footsteps to rank, as a demonstration.\n",
     "\n",
     "_**Run this notebook as-is.**_"
    ]
