Additional clarifications on step 1

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -46,20 +46,25 @@
     "import os\n",
     "\n",
     "## Edit this to point to where you want to save the csds files.\n",
+    "## Leaving this as-is puts the data in a folder named tmp at the\n",
+    "## top level of this repo.\n",
     "ds_collection_path = os.path.join('..','..','tmp') \n",
     "\n",
     "## Edit this to point at where you want to save combinations\n",
-    "## of csds files which we call a \"tome\"\n",
+    "## of csds files which we call a \"tome\".\n",
+    "## Leaving this as-is puts the data in a folder named tmp at the\n",
+    "## top level of this repo\n",
     "tome_collection_path = os.path.join('..','..','tmp')\n",
     "\n",
     "## If you have not downloaded any data yet, keep this as is\n",
-    "## If you have downloaded the data, adjust the \n",
+    "## If you have downloaded the data, adjust the date ranges\n",
+    "## to match the range of dates you downloaded.\n",
     "header_name = 'header_tome.2022-05-15,2022-05-15'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "059edfff",
+   "id": "0f5c7b85",
    "metadata": {},
    "source": [
     "#### You can always change these later by editing your `.env` file in the `notebooks` folder."
