Adjust most of the text in step 3.

--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -9,7 +9,13 @@
     "\n",
     "Let's say you wanted to cluster smoke grenades on dust2. One match may have ~100 smokes which isn't enough to do clustering. To get a large enough dataset for clustering, you need hundreds of thousands or millions of smokes. You would have to loop through thousands of matches and read thousands of files. No matter the file size, reading so many files is time consuming and cumbersome.\n",
     "\n",
-    "The solution to this is combining the data from many matches into a \"Tome\".  Once created, a tome allows you to read in the data from thousands of matches without having to read in thousands of files."
+    "The solution to this is combining the data from many matches into a \"**tome**\".  A tome contains \"**pages**\" which have concatenated dataframes, reducing the number of files to read. The maximum size one page can grow to is something you have control over. Making a tome is three basic steps:\n",
+    "\n",
+    "1. Determine which matches to include.\n",
+    "2. Loop through these matches and apply a transformation to a single dataframe.\n",
+    "3. Combine all of these dataframes into a tome.\n",
+    "\n",
+    "The tome \"**curator**\" manages steps 1 and 3 while step 2 happens in a loop you define. The first step is to decide which csds files to include, and you do that by pointing at a *special kind of tome*, a **header** or **subheader** tome. This notebook shows you how to make those special tomes. We discuss tomes in more details in later steps of the tutorial."
    ]
   },
   {
@@ -19,9 +25,13 @@
    "source": [
     "## Make header tome\n",
     "\n",
-    "To start making tomes, we must make a *header tome*. This tome contains the path to all matches that will be considered as tome members.  The header tome maker uses glob to find your files, read in the header channel, and stitch them all together. Each row corresponds to one match. CSDS files that are not in the main header tome are invisible in subsequent steps. Right now, the file search assumes your files are nested to the same level, but a more robust csds finder is possible, just open a PR.\n",
+    "The header tome contains the header channel data and path to all csds files it can find.  This requires a special function within the tome creator called `create_header_tome`. It uses glob to find all your csds files, reads in the header channel of each one, then stitches them all together. \n",
     "\n",
-    "You can also make subheader tomes that filters out some of the header tome rows. An example of a subheader tome that selects only matches on dust2 is in the second to last cell. Subheader tomes are useful when exploring certain maps, skill ranges, or any info from a match that can be found in the header. \n",
+    "The end result is a tome that contains a dataframe where each row corresponds to one match's header channel data and the path to the csds file (from glob). Since the path is included, we never need to use glob to find the files again. \n",
+    "\n",
+    "If you want to include all matches in a tome, point at the header tome to determine which matches to include (step 1 from previous cell). This is the default option anyway though...\n",
+    "\n",
+    "(Don't forget the subheader section below.)\n",
     "\n",
     "_**Run this notebook as-is.**_"
    ]
@@ -108,11 +118,15 @@
    "id": "b35b54d9",
    "metadata": {},
    "source": [
-    "## Make subheaders too\n",
+    "## Make subheaders\n",
     "\n",
-    "You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome.\n",
+    "You can also make subheader tomes that don't include some of the header tome rows (remember, each row = one match). You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. Then, when making a tome, you can point at a subheader to run your transformation and combination only on relevant matches.\n",
     "\n",
-    "Remember that the convention for the tome names are: `tome_name.start-date,end-data.comment`"
+    "Subheader tomes are useful when exploring certain maps or skill ranges, but the filtering is limited to info you can find in a header channel. Subheader tomes do not use glob to find files, but instead just read in the header tome and apply a filter that goes through pandas' `loc` function.\n",
+    "\n",
+    "An example of making a subheader tome is below this cell. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome.\n",
+    "\n",
+    "Remember that the convention for the tome names are: `tome_name.start-date,end-date.comment`"
    ]
   },
   {
