Use consistent language on what tomes are

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -24,7 +24,7 @@
     "Setup your enviornment to find all the yummy data science files on your computer box. We must set three things, \n",
     "\n",
     "1. Where you will save the data science files.\n",
-    "1. Where you will save your tomes (views of the data). Can be the same as step 1.\n",
+    "1. Where you will save your tomes (combinations of the data). Can be the same as step 1.\n",
     "1. What to call your header tome.\n",
     "\n",
     "These will be saved in a `.env` file in the `notebooks` folder. \n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5c7b85",
+   "id": "598c6fb2",
    "metadata": {},
    "source": [
     "#### You can always change these later by editing your `.env` file in the `notebooks` folder."
