--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -16,16 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3fd27b4",
-   "metadata": {},
-   "source": [
-    "## Setup your AWS credentials\n",
-    "\n",
-    "Follow the [guide on setting up AWS credentials](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/quickstart.html#configuration) to properly download things from the AWS Data Exchange."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "937d17f2",
    "metadata": {},
    "source": [
@@ -34,7 +24,7 @@
     "Setup your enviornment to find all the yummy data science files on your computer box. We must set three things, \n",
     "\n",
     "1. Where you will save the data science files.\n",
-    "1. Where you will save your tomes (views of the data). Can be the same as step 1.\n",
+    "1. Where you will save your tomes (combinations of the data). Can be the same as step 1.\n",
     "1. What to call your header tome.\n",
     "\n",
     "These will be saved in a `.env` file in the `notebooks` folder. \n",
@@ -54,9 +44,30 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
+    "## Edit this to point to where you want to save the csds files.\n",
+    "## Leaving this as-is puts the data in a folder named tmp at the\n",
+    "## top level of this repo.\n",
+    "ds_collection_path = os.path.join('..','..','tmp') \n",
+    "\n",
+    "## Edit this to point at where you want to save combinations\n",
+    "## of csds files which we call a \"tome\".\n",
+    "## Leaving this as-is puts the data in a folder named tmp at the\n",
+    "## top level of this repo\n",
     "tome_collection_path = os.path.join('..','..','tmp')\n",
-    "ds_collection_path = os.path.join('..','..','tmp')\n",
+    "\n",
+    "## If you have not downloaded any data yet, keep this as is\n",
+    "## If you have downloaded the data, adjust the date ranges\n",
+    "## to match the range of dates you downloaded.\n",
     "header_name = 'header_tome.2022-05-15,2022-05-15'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "598c6fb2",
+   "metadata": {},
+   "source": [
+    "#### You can always change these later by editing your `.env` file in the `notebooks` folder."
    ]
   },
   {
@@ -70,7 +81,7 @@
     "import re\n",
     "import warnings\n",
     "\n",
-    "if not re.match(\"\\S+.\\d{4}-\\d{2}-\\d{2},\\d{4}-\\d{2}-\\d{2}.*\\S*\",header_name):\n",
+    "if not re.match(r\"\\S+.\\d{4}-\\d{2}-\\d{2},\\d{4}-\\d{2}-\\d{2}[.\\S*]*\",header_name):\n",
     "    warnings.warn(f'Header name of {header_name} does not match convention of tome_name.start-date,end-data.comment')\n",
     "\n",
     "ds_type = 'csds'\n",
@@ -98,7 +109,10 @@
     "        if system != 'Linux':\n",
     "            print('unknown OS. The .env file was saved using linux syntax. If that is not right please edit it yourself lol.')\n",
     "with open(os.path.join('..','.env'), 'r') as f:\n",
-    "    print(f.read())"
+    "    print(f.read())\n",
+    "\n",
+    "os.makedirs(ds_collection_path, exist_ok=True)\n",
+    "os.makedirs(tome_collection_path, exist_ok=True)"
    ]
   },
   {
